k8s/coordinator-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: coordinator-service
spec:
  type: LoadBalancer
  selector:
    component: coordinator
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coordinator-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: coordinator
  template:
    metadata:
      labels:
        component: coordinator
    spec:
      containers:
        - name: coordinator
          image: zegermouw/coordinator:latest
          command: ["gunicorn"]
          args: ["-b", "0.0.0.0:5000", "app:app"]
          ports:
            - containerPort: 5000
