k8s/order-sharding-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-sharding-service
spec:
  type: LoadBalancer
  selector:
    component: order-sharding
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-sharding-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: order-sharding
  template:
    metadata:
      labels:
        component: order-sharding
    spec:
      containers:
        - name: order-sharding
          image: zegermouw/order-sharding:latest
          command: ["gunicorn"]
          args: ["-b", "0.0.0.0:5000", "app:app"]
          ports:
            - containerPort: 5000
