k8s/payment-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  type: LoadBalancer
  selector:
    component: payment
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: payment
  template:
    metadata:
      labels:
        component: payment
    spec:
      containers:
        - name: payment
          image: mwschutte/payment:latest
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          command: ["gunicorn"]
          args: ["-b", "0.0.0.0:5000", "app:app", --threads 3, --worker-class=gevent, --worker-connections=1000]
          ports:
            - containerPort: 5000
        - name: stock-db
          args:
            - mongod
            - --port
            - "27018"
          image: mongo
          ports:
            - containerPort: 27018
